--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "axios": "^1.4.0",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.8.0",
-        "sass": "^1.56.1",
+        "sass": "~1.32.13",
         "vite": "^4.0.0",
         "vue": "^3.2.36"
     },
